tdf#159428 Prefer heading over bookmarks in Navigator

When a bookmark is in a heading, highlighting the heading
is more important than highlighting the bookmark.

Change-Id: I6348e42b14ece226a25961bd3145193645972e79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162694
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>